--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "template-server",
+    "name": "ezbudget-server",
     "version": "0.0.1",
     "dependencies": {
         "axios": "^1.6.0",
